--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1>This is a Rock Paper Scissors Game.</h1>
+    <p>This is the first version of the game only playable in the console! Do not forget to open the console and call the function <b>game();</b></p>
 
     <script src="script.js"></script>
 </body>
